[package]
name = "linux-keyutils-keyring-store"
version = "0.1.0"
edition = "2024"

[[example]]
name = "example"

[dependencies]
keyring-core = { version = "0.4", path = "../keyring-core" }
linux-keyutils = { version = "0.2.4", features = ["std"] }

[dev-dependencies]
fastrand = "2.3.0"
rpassword = "7.4.0"
