[package]
authors = ["Daniel Brotsky <dev@brotsky.com>"]
description = "Linux keyutils-based credential store for the keyring-core"
keywords = ["linux", "keyutils", "credential-store", "keyring-core"]
license = "MIT OR Apache-2.0"
repository = "https://github.com/open-source-cooperative/linux-keyutils-keyring-store.git"
rust-version = "1.85"
exclude = [".github/"]
readme = "README.md"
name = "linux-keyutils-keyring-store"
version = "0.1.0"
edition = "2024"

[[example]]
name = "example"

[dependencies]
keyring-core = { version = "0.4", path = "../keyring-core" }
linux-keyutils = { version = "0.2.4", features = ["std"] }

[dev-dependencies]
fastrand = "2.3.0"
rpassword = "7.4.0"
