[package]
authors = ["Daniel Brotsky <dev@brotsky.com>", "landhb <landhb@users.noreply.github.com>"]
description = "Linux Keyutils credential store for keyring"
homepage = "https://github.com/open-source-cooperative/keyring-rs/wiki/Keyring"
keywords = ["linux", "keyutils", "credential-store", "keyring"]
license = "MIT OR Apache-2.0"
repository = "https://github.com/open-source-cooperative/linux-keyutils-keyring-store.git"
rust-version = "1.85"
exclude = [".github/"]
readme = "README.md"
name = "linux-keyutils-keyring-store"
version = "0.1.0"
edition = "2024"

[[example]]
name = "example"

[dependencies]
keyring-core = { version = "0.7" }
linux-keyutils = { version = "0.2.4", features = ["std"] }

[dev-dependencies]
fastrand = "2.3"
rpassword = "7.4"

[package.metadata.docs.rs]
targets = ["x86_64-unknown-linux-gnu"]
